--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]
-onload="location.href='#colorlib-page'"-->
+onload="location.href='#colorlib-page'"
+location.href='#colorlib-page'-->
 
 	</head>
-	<body onload="location.href='#colorlib-page'">
+	<body onload="">
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -112,7 +113,7 @@ onload="location.href='#colorlib-page'"-->
 						   					<h1 >Hi! <br>I'm Amani</h1>
 						   					<h2>I am a DevOps Engineer</h2>
 						   					<h2>Making my way into cyber security ...</h2>
-												<p><a href="file://C:/Users/Amani/Documents/Applications/jackson/documents/CertificateOfCompletion_Learning_SSLTLS.pdf" download class="btn btn-primary btn-learn" target="_blank" >Download my CV <i class="icon-download4"></i></a></p>
+												<p><a href="file://C:\Users\Amani\Documents\MyPortfolio\amanibenaoun\documents\Amani_Benaoun_cv.pdf" download class="btn btn-primary btn-learn" target="_blank" >Download my CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
