--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ location.href='#colorlib-page'-->
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/become_an_EH.PNG);">
+							<div class="project" style="background-image: url(images/become_an_EH.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">LinkedIN Learning Path</a></h3>
@@ -819,7 +819,7 @@ location.href='#colorlib-page'-->
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/become_an_ITS.PNG);">
+							<div class="project" style="background-image: url(images/become_an_ITS.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">LinkedIN Learning Path</a></h3>
