--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js">
 		window.onbeforeunload = function () {
-   											window.scrollTo(0, 0);
-											}
+   				window.scrollTo(0, 0);
+				}
 	</script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
@@ -58,7 +58,7 @@ onload="location.href='#colorlib-page'"
 location.href='#colorlib-page'-->
 
 	</head>
-	<body onload="">
+	<body onload="location.href='#'">
 	<div id="main-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
