--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ location.href='#colorlib-page'-->
 
 	</head>
 	<body onload="location.href='#'">
-	<div id="main-page">
+	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
