update alt text

--- a/index.html
+++ b/index.html
@@ -803,14 +803,14 @@ location.href='#colorlib-page'-->
 					</div>
 					<div>
 						<h4 style="color: #444444; position: relative; left: 20%;">LinkedIn Learning Path: Become an Ethical Hacker</h4>
-						<a href="#" onClick="MyWindow=window.open('EthicalHackingPath.html','MyWindow','width=900,height=650'); return false;"><img src="images/Become_an_EH.png" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com" height="650" width="600" style="display: block; margin-left: auto; margin-right: auto; width: 80%;"></a>
+						<a href="#" onClick="MyWindow=window.open('EthicalHackingPath.html','MyWindow','width=900,height=650'); return false;"><img src="images/Become_an_EH.png" alt="Become an Ethical Hacker" height="650" width="600" style="display: block; margin-left: auto; margin-right: auto; width: 80%;"></a>
 						<p>
 							<span><a href="#" onClick="MyWindow=window.open('EthicalHackingPath.html','MyWindow','width=900,height=650'); return false;" class="btn btn-primary btn-learn" style="position: relative; left: 11%; width: 565px">Path Details</a>
 							</span>
 						</p>
 						<br>
 						<h4 style="color: #444444; position: relative; left: 20%;">LinkedIn Learning Path: Become an IT Security Specialist</h4>
-						<a href="#" onClick="MyWindow=window.open('ITSecuritySpecialistPath.html','MyWindow','width=900,height=650'); return false;"><img src="images/Become_an_ITS.png" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com" height="650" width="600" style="display: block; margin-left: auto; margin-right: auto; width: 80%;"></a>
+						<a href="#" onClick="MyWindow=window.open('ITSecuritySpecialistPath.html','MyWindow','width=900,height=650'); return false;"><img src="images/Become_an_ITS.png" alt="Become an IT Security Specialist" height="650" width="600" style="display: block; margin-left: auto; margin-right: auto; width: 80%;"></a>
 						<p>
 							<span><a href="#" onClick="MyWindow=window.open('ITSecuritySpecialistPath.html','MyWindow','width=900,height=650'); return false;" class="btn btn-primary btn-learn" style="position: relative; left: 11%; width: 565px">Path Details</a>
 							</span>
