--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@ location.href='#colorlib-page'-->
 					</div>
 					<div>
 						<h4 style="color: #444444; position: relative; left: 20%;">LinkedIn Learning Path: Become an Ethical Hacker</h4>
-						<a href="#" onClick="MyWindow=window.open('EthicalHackingPath.html','MyWindow','width=900,height=650'); return false;"><img src="images/Become_an_EH.png" alt="Become an Ethical Hacker" height="650" width="600" style="display: block; margin-left: auto; margin-right: auto; width: 80%;"></a>
+						<img src="images/Become_an_EH.png" alt="Become an Ethical Hacker" height="450" width="400" style="display: block; margin-left: auto; margin-right: auto; width: 80%;">
 						<p>
 							<span><a href="#" onClick="MyWindow=window.open('EthicalHackingPath.html','MyWindow','width=900,height=650'); return false;" class="btn btn-primary btn-learn" style="position: relative; left: 11%; width: 565px">Path Details</a>
 							</span>
