--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@ location.href='#colorlib-page'-->
 						<div style="background-image: url(images/Become_an_EH.png);">
 							
 						</div>
-						<img src="images/amani2.jpg" alt="Become an Ethical Hacker" height="450" width="400" style="display: block; margin-left: auto; margin-right: auto; width: 80%;">
+						<img src="images/Become_an_EH.jpg" alt="Become an Ethical Hacker" height="450" width="400" style="display: block; margin-left: auto; margin-right: auto; width: 80%;">
 						<p>
 							<span><a href="#" onClick="MyWindow=window.open('EthicalHackingPath.html','MyWindow','width=900,height=650'); return false;" class="btn btn-primary btn-learn" style="position: relative; left: 11%; width: 565px">Path Details</a>
 							</span>
