--- a/index.html
+++ b/index.html
@@ -801,28 +801,40 @@ location.href='#colorlib-page'-->
 							<h2 class="colorlib-heading animate-box">Recent Certificates</h2>
 						</div>
 					</div>
-					<div>
-						<h4 style="color: #444444; position: relative; left: 20%;">LinkedIn Learning Path: Become an Ethical Hacker</h4>
-						<div style="background-image: url(images/Become_an_EH.png);">
-							
-						</div>
-						<img src="images/Become_an_EH.jpg" alt="Become an Ethical Hacker" height="450" width="400" style="display: block; margin-left: auto; margin-right: auto; width: 80%;">
-						<p>
-							<span><a href="#" onClick="MyWindow=window.open('EthicalHackingPath.html','MyWindow','width=900,height=650'); return false;" class="btn btn-primary btn-learn" style="position: relative; left: 11%; width: 565px">Path Details</a>
-							</span>
-						</p>
-						<br>
-						<h4 style="color: #444444; position: relative; left: 20%;">LinkedIn Learning Path: Become an IT Security Specialist</h4>
-						<a href="#" onClick="MyWindow=window.open('ITSecuritySpecialistPath.html','MyWindow','width=900,height=650'); return false;"><img src="images/Become_an_ITS.png" alt="Become an IT Security Specialist" height="650" width="600" style="display: block; margin-left: auto; margin-right: auto; width: 80%;"></a>
-						<p>
-							<span><a href="#" onClick="MyWindow=window.open('ITSecuritySpecialistPath.html','MyWindow','width=900,height=650'); return false;" class="btn btn-primary btn-learn" style="position: relative; left: 11%; width: 565px">Path Details</a>
-							</span>
-						</p>
-
+					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 					</div>
 					<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/become_an_EH.jpg);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">LinkedIN Learning Path</a></h3>
+										<span>Become an Ethical Hacker</span>
+										<p class="icon">
+											<span><a href="#" onClick="MyWindow=window.open('EthicalHackingPath.html','MyWindow','width=900,height=650'); return false;">Browse courses</a>
+											</span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/become_an_ITS.jpg);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">LinkedIN Learning Path</a></h3>
+										<span>Become an IT Security Specialist</span>
+										<p class="icon">
+											<span><a href="#" onClick="MyWindow=window.open('ITSecuritySpecialistPath.html','MyWindow','width=900,height=650'); return false;">Browse courses</a>
+											</span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					<div class="row">
 						<div class="col-md-12 animate-box">
-							<p><a href="https://www.linkedin.com/in/amanibenaoun" class="btn btn-primary btn-lg btn-load-more" target="_blank" style="background: #eeeeee; color: #000000; border: 2px solid #fff;">To know more about the courses I attended, please check my LinekedIn profile.. </i></a></p>
+							<p><a href="https://www.linkedin.com/in/amanibenaoun" class="btn btn-primary btn-lg btn-load-more" target="_blank">To know more about the courses I attended, please check my LinekedIn profile.. </i></a></p>
 						</div>
 					</div>
 				</div>
