--- a/index.html
+++ b/index.html
@@ -813,6 +813,14 @@ location.href='#colorlib-page'-->
 						<p>
 							<span><a href="#" onClick="MyWindow=window.open('ITSecuritySpecialistPath.html','MyWindow','width=900,height=650'); return false;" class="btn btn-primary btn-learn" style="position: relative; left: 11%; width: 565px">Path Details</a>
 							</span>
+						</p>
+						<br>
+						<h4 style="color: #444444; position: relative; left: 30%;">TryHackMe Learning Path: Pre Security</h4>
+						<img src="images/PreSecurityPath.png" alt="THM Pre Security Learning Path" height="450" width="400" style="display: block; margin-left: auto; margin-right: auto; width: 80%;">
+						<br>
+						<h4 style="color: #444444; position: relative; left: 25%;">TryHackMe Learning Path: Pentest+ CompTIA</h4>
+						<img src="images/PentestPlusPath.png" alt="THM Pentest+ CompTIA Learning Path" height="450" width="400" style="display: block; margin-left: auto; margin-right: auto; width: 80%;">
+						<br>
 					<div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="https://www.linkedin.com/in/amanibenaoun" class="btn btn-primary btn-lg btn-load-more" target="_blank" style="background: #eeeeee; color: #000000; border: 2px solid #fff;">To know more about the courses I attended, please check my LinekedIn profile.. </a></p>
